--- a/index.html
+++ b/index.html
@@ -7,61 +7,60 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="main.css">
-  <title>Movie-History</title>
+  <link rel="stylesheet" href="./main.css">
+  <title>Movie History</title>
 </head>
 
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+          aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Movie History</a>
+      </div>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-        aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Movie History</a>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a id="authenticate">Authentication</a>
+          </li>
+          <li>
+            <a id="mine">My Movies</a>
+          </li>
+          <li>
+            <a id="navSearch">Search</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+
+  <div class="hide" id="authScreen">
+    <h1>Sign In</h1>
+  </div>
+  <div class="hide" id="myMovies">
+    <h1>My Movies</h1>
+  </div>
+  <div id="search" class="text-center">
+    <h1>Search Movies</h1>
+
+    <div class="input-group col-sm-6 col-sm-offset-3">
+      <span class="input-group-addon glyphicon glyphicon-search" id="basic-addon1"></span>
+      <input type="text" class="form-control" placeholder="Star Wars" aria-describedby="basic-addon1">
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-
-          <a id="#authScreen" >AUTHENTICATION
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li>
-          <a id="#myMovies" >MY MOVIES</a>
-        </li>
-        <li>
-          <a id="#search" >SEARCH</a>
-        </li>
-      </ul>
-
-    </div>
-    <!-- /.navbar-collapse -->
+    <div id="movies"></div>
   </div>
-  <!-- /.container-fluid -->
-</nav>
-
-<div class="text-center hide" id="search">
-  <div class="input-group input-group-lg col-xs-6 col-xs-offset-3">
-    <span class="input-group-addon glyphicon glyphicon-search" aria-hidden="true"></span>
-    <input type="text" class="form-control" placeholder="Pulp Fiction" id="searchBar">
-  </div>
-
-  <div id="movies" class="container"></div>
-</div>
-<div class="text-center hide" id="myMovies">
-  <h1>My Movies</h1>
-  <div id="moviesMine"></div>
-</div>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
