--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
   </div>
   <div class="hide" id="myMovies">
     <h1>My Movies</h1>
+    <div id="savedMovies"></div>
   </div>
   <div id="search" class="text-center">
     <h1>Search Movies</h1>
 
     <div class="input-group col-sm-6 col-sm-offset-3">
       <span class="input-group-addon glyphicon glyphicon-search" id="basic-addon1"></span>
-      <input id="searchtxt" type="text" class="form-control" placeholder="Star Wars" aria-describedby="basic-addon1">
+      <input id="searchBar" type="text" class="form-control" placeholder="Star Wars" aria-describedby="basic-addon1">
     </div>
 
     <div id="movies"></div>
@@ -67,6 +68,7 @@
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
   <script src="dist/app.js"></script>
 </body>
 
