--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="styles/main.css">
   <title>Movie History</title>
 </head>
 
@@ -50,6 +50,11 @@
   </div>
   <div class="hide" id="myMovies">
     <h1>My Movies</h1>
+    <div id="filterButtons">
+      <button class="btn btn-danger wishlist">Show Wishlist Movies</button>
+      <button class="btn btn-info watched">Show Watched Movies</button>
+      <button class="btn btn-warning all">Show All Movies</button>
+    </div>
     <div id="savedMovies"></div>
   </div>
   <div id="search" class="text-center">
